# nanopdf

./: .gitignore  .gitleaks.toml  .gitmodules  AGENTS.md  CCITT_Group4_Decoder_Implementation.md  CLAUDE.md  CMakeLists.txt  FONTS_COMPRESSION_SUMMARY.md  FONTS_EMBEDDING.md  IMPLEMENTATION_SUMMARY.md  MCP_USAGE.md  PLAN.md  README.md  TASKS.md  THIRD_PARTY.md  TODO.md  WASM_FONTS_INTEGRATION.md  meson.build  meson.options  test_phase1_attachments.cc  test_phase1_color.cc  test_phase1_tiff.cc  test_phase2_table_extraction.cc  test_phase2_text_layout.cc  test_phase2_text_layout_integration.cc  test_phase3_form_manipulation.cc  test_phase4_document_structure.cc
.github/workflows/: ci.yml  deploy-wasm-pages.yml  visual-regression.yml
cmake/: embed_cjk_fonts.cmake  embed_fonts.cmake  embed_fonts.py  embed_fonts_binary.py  llvm-mingw-cross-win32.cmake  mingw32-cross.cmake
data/standardencoding/: README.md  samples.json
docs/: C11_MIGRATION.md  CCITT_DECODER_INVESTIGATION.md  CCITT_REWRITE_STATUS.md  FINDINGS.md  FONTS_COMPRESSION_SUMMARY.md  FONTS_EMBEDDING.md  MCP_USAGE.md  TEST_MIGRATION_SUMMARY.md  ccitt-poppler-logic.md  ccitt-poppler-notes.md
docs/archive/: CCITT_DECODER_FIXES.md  CCITT_VERIFICATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  TEST_MIGRATION_SUMMARY.md
examples/: test_embedded_fonts.cc
examples/img2pdf/: CMakeLists.txt  img2pdf.cc
examples/mcp/: README.md  (+2 more)
examples/pdfdump/: CMakeLists.txt  README.md  build.sh  pdfdump.cc
examples/pdfview/: CMakeLists.txt  README.md  pdf_debug.cc  pdf_debug.hh  pdf_document.cc  pdf_document.hh  pdf_sign.cc  pdf_sign.hh  pdfview.cc  run.sh  tls_client.cc  tls_client.hh
examples/rasterize/: CMakeLists.txt  README.md  build-embed-fonts.sh  build.sh  rasterize.cc
fonts/: QUICK_REFERENCE.md  README.md  USAGE.md
ncrypto/: CMakeLists.txt  README.md
ncrypto/include/ncrypto/: nc_aes.h  nc_asn1.h  nc_bigint.h  nc_cms.h  nc_ecc.h  nc_hash.h  nc_kdf.h  nc_pkcs12.h  nc_rfc3161.h  nc_rsa.h  nc_test.h  nc_tls.h  nc_x25519.h  nc_x509.h
ncrypto/src/: nc_aes.c  nc_asn1.c  nc_bigint.c  nc_cms.c  nc_ecc.c  nc_hash.c  nc_kdf.c  nc_pkcs12.c  nc_rfc3161.c  nc_rsa.c  nc_tls.c  nc_x25519.c  nc_x509.c
ncrypto/tests/: test_aes.c  test_asn1.c  test_bigint.c  test_cms.c  test_ecc.c  test_hash.c  test_kdf.c  test_pkcs12.c  test_rfc3161.c  test_rsa.c  test_tls.c  test_x25519.c  test_x509.c
scripts/: bench-wasm-render.mjs  benchmark-raster-optimization.sh  bootstrap-clang.sh  bootstrap-emscripten.sh  bootstrap-llvm-mingw-win32.sh  bootstrap-llvm-mingw-win64.sh  bootstrap-mingw-win32.sh  bootstrap-mingw-win64.sh  download-corpora.sh  fetch-external-tests.sh  generate-synthetic-text-pdf.py  generate-test-pdfs.py  generate-visual-refs.sh  install-thorvg.sh  prepare-external-fonts.py  profile-lightvg-stress.sh  run-ci.cmake  setup-mingw.sh  update-glyph-list-inc.py
src/: adobe_glyph_list.inc  asn1-der.cc  asn1-der.hh  benchmark.cc  blend2d-backend.cc  blend2d-backend.hh  canvas-exporter.cc  canvas-exporter.hh  ccitt-decoder.hh  ccitt-encoder.hh  cff-parser.cc  cff-parser.hh  cff-wrapper.hh  cms.cc  cms.hh  color-transform.cc  color-transform.hh  common-macros.inc  crypto-pk.cc  crypto-pk.hh  crypto.cc  crypto.hh  document-structure.cc  ecc.cc  ecc.hh  font-provider.cc  font-provider.hh  font-unicode-map.hh  form-manipulation.cc  fpng.cpp  jbig2-decoder.cc  jbig2-decoder.hh  jpx-decoder.cc  jpx-decoder.hh  lightvg-backend.cc  lightvg-backend.hh  lvg-compat.cc  lvg-compat.hh  mcp-json.cc  mcp-protocol.hh  (+69 more)
tests/: CMakeLists.txt  NANOTEST.md  README.md  acutest.h  nanotest.hh
tests/c/: test_nanopdf_c.c
tests/fixtures/: test_helpers.cc  test_helpers.hh  test_signer.p12
tests/integration/: CMakeLists.txt  integration_suite_main.cc  test_parse_real_pdfs.cc  test_text_extraction.cc
tests/unit/: test_suite_main.cc
tests/unit/annotations/: CMakeLists.txt  test_annotation_types.cc  test_freetext_annotation.cc  test_incremental_annotations.cc  test_link_annotation.cc  test_markup_annotation.cc  test_text_annotation.cc
tests/unit/backends/: CMakeLists.txt  test_focal_radial_gradient.cc  test_render_progress.cc
tests/unit/core/: CMakeLists.txt  test_pdf_function.cc  test_pdf_parsing.cc  test_value.cc  test_xref.cc
tests/unit/document/: CMakeLists.txt  test_attachments.cc  test_document_catalog.cc  test_document_info.cc  test_document_structure.cc  test_named_destinations.cc  test_outline.cc  test_page_labels.cc  test_pdfa_validation.cc  test_phase1_attachments.cc  test_phase4_document_structure.cc  test_revision_history.cc  test_signature_validation.cc  test_signing.cc
tests/unit/filters/: CMakeLists.txt  test_ascii85_decode.cc  test_asciihex_decode.cc  test_ccitt_decode.cc  test_dct_decode.cc  test_filter_chains.cc  test_flate_decode.cc  test_lzw_decode.cc  test_phase1_color.cc  test_phase1_tiff.cc  test_png_predictors.cc  test_runlength_decode.cc  test_tiff_decode.cc
tests/unit/fonts/: CMakeLists.txt  test_cff_wrapper.cc  test_cmap.cc  test_font_substitution.cc  test_type0_font.cc  test_type3_font.cc
tests/unit/forms/: CMakeLists.txt  test_button_field.cc  test_choice_field.cc  test_form_field_types.cc  test_form_manipulation.cc  test_form_writeback.cc  test_phase3_form_manipulation.cc  test_text_field.cc
tests/unit/graphics/: CMakeLists.txt  test_color_spaces.cc  test_color_transform.cc
tests/unit/security/: CMakeLists.txt  test_aes.cc  test_asn1_cms.cc  test_ecc.cc  test_hash.cc  test_rc4.cc  test_rsa_pk.cc  test_tls_crypto.cc  test_x509.cc
tests/unit/text/: CMakeLists.txt  test_phase2_table_extraction.cc  test_phase2_text_layout.cc  test_phase2_text_layout_integration.cc  test_table_extraction.cc  test_text_extraction.cc  test_text_layout.cc  test_text_state.cc
tests/validation/: CMakeLists.txt  README.md  arlington_parser.cc  arlington_parser.hh  arlington_validator.cc  arlington_validator.hh  test_arlington_parser.cc  test_arlington_validate.cc  test_corpus_parsing.cc  test_pdf_differences.cc  test_safedocs.cc  validation_suite_main.cc
tools/: ccitt_compare.cc  check_font_kerning.cc  check_kerning.cc  visual_compare.cc
(+88 files in other folders)
